# gea-2024-bhg

./: .gitignore  CMakeLists.txt  gmon.out
assets/Scripts/: enemy_move.lua
assets/Tilesets/: large.ase  tileset.ase
src/: main.cpp
src/DemoGame/: Backgrounds.h  Camera.h  Colliders.h  DemoGame.h  Enemy.h  FlappyCat.h  Player.h  Render.h  Sound.h  Sprites.h  Tilemap.h  Tilemaps.h
src/Engine/: Components.h  Entity.h  Game.cpp  Game.h  Scene.cpp  Scene.h  Systems.h
src/Engine/Graphics/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/Pixels/: BackgroundSystems.h  PixelSystems.h  Pixels.h
src/Scene/: Components.h  Scene.cpp  Scene.h  Systems.h
